
[package]
name = "mavlink"
version = "0.13.2"
authors = [
    "Todd Stellanova",
    "Michal Podhradsky",
    "Kevin Mehall",
    "Tim Ryan",
    "Patrick José Pereira",
    "Ibiyemi Abiodun",
]
build = "build/main.rs"
description = "Implements the MAVLink data interchange format for UAVs."
readme = "../README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/mavlink/rust-mavlink"
edition.workspace = true
rust-version.workspace = true

[build-dependencies]
mavlink-bindgen = { path = "../mavlink-bindgen", default-features = false }

[[example]]
name = "mavlink-dump"
path = "examples/mavlink-dump/src/main.rs"
required-features = ["ardupilotmega"]

[dependencies]
mavlink-core = { path = "../mavlink-core", default-features = false }
num-traits = { workspace = true, default-features = false }
num-derive = { workspace = true }
bitflags = { workspace = true }
serde = { version = "1.0.115", optional = true, default-features = false, features = ["derive", "alloc"] }
serde-big-array = { version = "0.5.1", optional = true, default-features = false }

defmt = { version = "0.3.10", optional = true }
postcard-schema = { version = "0.2.0", optional = true, features = ["derive"] }

[features]
default = ["ardupilotmega", "direct-serial", "serde", "std", "tcp", "udp"]

"common"            = []
"minimal"           = []
"test"              = []
"standard"          = ["common"]
"development"       = ["common"]

"ardupilotmega"     = ["common", "icarous", "uavionix"]
"asluav"            = ["common"]
"avssuas"           = ["common"]
"cubepilot"         = ["common"]
"icarous"           = []
"matrixpilot"       = ["common"]
"paparazzi"         = ["common"]
"slugs"             = ["common"]
"storm32"           = ["common"]
"ualberta"          = ["common"]
"uavionix"          = ["common"]

"python_array_test" = ["common"]

"all-dialects" = ["ardupilotmega", "asluav", "avssuas", "common", "cubepilot", "development", "icarous", "matrixpilot", "minimal", "paparazzi", "python_array_test", "slugs", "standard", "storm32", "test", "ualberta", "uavionix"]
# why is this one here?
"all" = ["ardupilotmega", "asluav", "avssuas", "common", "cubepilot", "development", "icarous", "minimal", "python_array_test", "standard", "test", "ualberta", "uavionix"]

"emit-description"      = ["mavlink-bindgen/emit-description"]
"emit-extensions"       = ["mavlink-bindgen/emit-extensions"]
"format-generated-code" = []

"direct-serial" = ["mavlink-core/direct-serial"]
"signing"       = ["mavlink-core/signing"]
"std"           = ["mavlink-core/std", "serde/std"]
"tcp"           = ["mavlink-core/tcp"]
"udp"           = ["mavlink-core/udp"]
"tokio-1"       = ["mavlink-core/tokio-1"]

# NOTE: Only one of 'embedded' and 'embedded-hal-02' features can be enabled.
# Use "embedded' feature to enable embedded-hal=1.0 (embedded-io and embedded-io-async is part of embedded-hal).
# Use 'embedded-hal-0.2' feature to enable deprecated embedded-hal=0.2.3 (some hals is not supports embedded-hal=1.0 yet).
"embedded"        = ["mavlink-core/embedded"]
"embedded-hal-02" = ["mavlink-core/embedded-hal-02"]

# Derive providers
"serde"        = ["dep:serde", "dep:serde-big-array", "mavlink-core/serde"]
"defmt"        = ["dep:defmt"]
"postcard-rpc" = ["dep:postcard-schema"]

# build with all features on docs.rs so that users viewing documentation
# can see everything
[package.metadata.docs.rs]
features = [
    "default",
    "all-dialects",
    "emit-description",
    "emit-extensions",
    "format-generated-code",
    "tokio-1",
    "signing"
]

[dev-dependencies]
tokio = { version = "1.0", default-features = false, features = ["macros", "rt", "time" ] }
